<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/back"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@drawable/header_back" >

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/header_info" />

        <Button
            android:id="@+id/btnBackBor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:background="@drawable/header_back_btn" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/borluulah"
            android:textColor="#fff"
            android:textSize="15sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="10dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/main_tv_shop" />

        <Spinner
            android:id="@+id/spin_shop"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:prompt="@string/buteegdehuun" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/main_tv_product" />

        <Spinner
            android:id="@+id/spin_pro"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/et_count"
                android:layout_width="164dp"
                android:layout_height="wrap_content"
                android:inputType="number" >

                <requestFocus />
            </EditText>

            <Button
                android:id="@+id/btn_addToList"
                style="@style/color_blue"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/btn_borluulah" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:paddingTop="10dp" >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="@string/ID" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_toLeftOf="@+id/textView5"
                    android:layout_toRightOf="@+id/textView3"
                    android:paddingLeft="20dp"
                    android:text="@string/PNAME" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:paddingRight="130dp"
                    android:text="@string/DATE" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_toLeftOf="@+id/textView7"
                    android:paddingRight="5dp"
                    android:text="@string/COST" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_toLeftOf="@+id/textView6"
                    android:text="@string/COUNT" />
            </RelativeLayout>
        </LinearLayout>

        <ListView
            android:id="@+id/list"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scrollbarThumbVertical="@drawable/scroll" >
        </ListView>
    </LinearLayout>

</LinearLayout>